# jffe

./: .dockerignore  .editorconfig  .flake8  .gitignore  LICENSE  MANIFEST.in  Makefile  docker-compose.override.yml  docker-compose.yml  pyproject.toml  setup.py
ci/base/: Dockerfile
ci/files/: run.sh
ci/nginx/: Dockerfile
ci/nginx/templates/: files.conf.template
ci/tests/: Dockerfile  run.sh
etc/: requirements-dev.txt  requirements-tests.txt  requirements.txt
etc/config/: jffe.yml
jffe/: __init__.py
jffe/contrib/: README.md  settings.py
jffe/core/: README.md
jffe/core/files/: app.py  settings.py  utils.py  views.py
jffe/core/files/file_handlers/: base.py  fs.py
tests/: settings.py  test_upload_download.py  test_version.py
