[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jffe"
dynamic = ["version"]
authors = [{ name = "Toxa Yantsen" }]
description = "Just For Fun Examples"
license = { text = "MIT" }
dependencies = [
    "pydantic~=2.10.6",
    "aiohttp~=3.13.2",
    "PyYAML~=6.0.2",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-aiohttp",
]
dev = [
    "flake8~=6.0.0",
    "black~=23.12.0",
    "isort~=5.12.0",
]

[tool.setuptools.dynamic]
version = { attr = "jffe.__version__.VERSION" }

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["jffe*"]

[tool.isort]
profile = 'black'
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
line_length = 88

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
minversion = '6.0'
cache_dir = '/tmp/pytest_cache'
asyncio_mode = 'auto'
markers = [
    'asyncio',
]
testpaths = [
    'tests',
]
