[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jffe"
dynamic = ["version"]
authors = [{ name = "Toxa Yantsen" }]
description = "Just For Fun Examples"
license = { text = "MIT" }
dependencies = [
    "pydantic~=2.10.6",
    "aiohttp~=3.13.3",
    "PyYAML~=6.0.3",
]

[dependency-groups]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-aiohttp",
]
dev = [
    "flake8~=7.3.0",
    "black~=26.1.0",
    "isort~=8.0.1",
]

[tool.setuptools.dynamic]
version = { attr = "jffe.__version__.VERSION" }

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["jffe*"]

[tool.isort]
profile = "black"
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
line_length = 88

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
minversion = "6.0"
cache_dir = "/tmp/pytest_cache"
asyncio_mode = "auto"
markers = [
    "asyncio",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = [
    "jffe",
]

[tool.coverage.report]
show_missing = true
